--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
             <div class="nav_menu_2_input">
               <img src="./images/header/search.svg" alt="" />
               <input
-                type="search"
+                type="text"
+                id="searchInput"
                 placeholder="Mahsulotlar va turkumlar izlash"
               />
+              <div id="results"></div>
             </div>
           </div>
           <div class="media_nav_menu">
