--- a/index.html
+++ b/index.html
@@ -190,16 +190,21 @@
             data-name="Radar-detektor"
             data-price="1 200 000"
           >
-            <img src="./images/home/mahsulot-rasmlari/radar.jpg" alt="" />
-            <h3>Radar-detektor Neoline X-COP 7700s Black</h3>
-            <h4>2 064 000</h4>
-            <h5>242 000 so'm x 12oy</h5>
-            <div class="section-avto-jihoz-card-btn">
-              <div class="korzinka">
-                <img src="./images/home/korzinka.svg" alt="" />
-              </div>
-              <div>
-                <button>Muddatli to'lov</button>
+            <img
+              class="section-avto-image"
+              src="./images/home/mahsulot-rasmlari/radar.jpg"
+              alt=""
+            />
+            <div class="section-avto-jihoz-card-bottom">
+              <h3>Radar-detektor Neoline X-COP 7700s Black</h3>
+              <h4>2 064 000 so'm</h4>
+              <div class="section-avto-jihoz-card-btn">
+                <div class="korzinka">
+                  <img src="./images/home/korzinka.svg" alt="" />
+                </div>
+                <div>
+                  <button>Muddatli to'lov</button>
+                </div>
               </div>
             </div>
           </div>
@@ -209,18 +214,20 @@
             data-price="20 000"
           >
             <img
+              class="section-avto-image"
               src="./images/home/mahsulot-rasmlari/oil-filter.jpg"
               alt="Oil filter!"
             />
-            <h3>Moy filter Bosch company</h3>
-            <h4>20 000</h4>
-            <h5>2 000 so'm x 12oy</h5>
-            <div class="section-avto-jihoz-card-btn">
-              <div class="korzinka">
-                <img src="./images/home/korzinka.svg" alt="" />
-              </div>
-              <div>
-                <button>Muddatli to'lov</button>
+            <div class="section-avto-jihoz-card-bottom">
+              <h3>Moy filter Bosch company</h3>
+              <h4>20 000</h4>
+              <div class="section-avto-jihoz-card-btn">
+                <div class="korzinka">
+                  <img src="./images/home/korzinka.svg" alt="" />
+                </div>
+                <div>
+                  <button>Muddatli to'lov</button>
+                </div>
               </div>
             </div>
           </div>
@@ -230,18 +237,66 @@
             data-price="400 000"
           >
             <img
+              class="section-avto-image"
               src="./images/home/mahsulot-rasmlari/stator.webp"
               alt="stator"
             />
-            <h3>Stator Onix Kaptiva Malibu Lasetti Cobalt</h3>
-            <h4>400 000</h4>
-            <h5>70 000 so'm x 12oy</h5>
-            <div class="section-avto-jihoz-card-btn">
-              <div class="korzinka">
-                <img src="./images/home/korzinka.svg" alt="" />
+            <div class="section-avto-jihoz-card-bottom">
+              <h3>Stator Onix Kaptiva Malibu Lasetti Cobalt</h3>
+              <h4>400 000</h4>
+              <div class="section-avto-jihoz-card-btn">
+                <div class="korzinka">
+                  <img src="./images/home/korzinka.svg" alt="" />
+                </div>
+                <div>
+                  <button>Muddatli to'lov</button>
+                </div>
               </div>
-              <div>
-                <button>Muddatli to'lov</button>
+            </div>
+          </div>
+          <div
+            class="section-avto-jihoz-card"
+            data-name="Stator Onix Kaptiva Malibu Lasetti Cobalt"
+            data-price="400 000"
+          >
+            <img
+              class="section-avto-image"
+              src="./images/home/mahsulot-rasmlari/acumlyator.webp"
+              alt="stator"
+            />
+            <div class="section-avto-jihoz-card-bottom">
+              <h3>Byd song plus akumlyator</h3>
+              <h4>800 000</h4>
+              <div class="section-avto-jihoz-card-btn">
+                <div class="korzinka">
+                  <img src="./images/home/korzinka.svg" alt="" />
+                </div>
+                <div>
+                  <button>Muddatli to'lov</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="section-avto-jihoz-card"
+            data-name="Stator Onix Kaptiva Malibu Lasetti Cobalt"
+            data-price="400 000"
+          >
+            <img
+              class="section-avto-image"
+              src="./images/home/mahsulot-rasmlari/acumlyator.webp"
+              alt="stator"
+            />
+            <div class="section-avto-jihoz-card-bottom">
+              <h3>Byd song plus akumlyator</h3>
+              <h4>800 000</h4>
+              <div class="section-avto-jihoz-card-btn">
+                <div class="korzinka">
+                  <img src="./images/home/korzinka.svg" alt="" />
+                </div>
+                <div>
+                  <button>Muddatli to'lov</button>
+                </div>
               </div>
             </div>
           </div>
